--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "grunt-contrib-clean": "^0.4.1",
     "grunt-contrib-coffee": "^0.7.0",
     "grunt-contrib-concat": "^0.3.0",
+    "grunt-contrib-connect": "^0.10.1",
     "grunt-contrib-copy": "^0.4.1",
     "grunt-contrib-jshint": "^0.4.3",
     "grunt-contrib-less": "~0.11.0",
@@ -29,6 +30,7 @@
     "grunt-html2js": "^0.1.9",
     "grunt-karma": "^0.8.2",
     "grunt-ng-annotate": "^0.8.0",
+    "grunt-open": "^0.2.3",
     "karma": "^0.12.9",
     "karma-coffee-preprocessor": "^0.2.1",
     "karma-firefox-launcher": "^0.1.3",
