--- a/package.json
+++ b/package.json
@@ -1,18 +1,6 @@
 {
-  "author": "Josh David Miller",
-  "name": "ngbp",
-  "version": "0.3.2",
-  "homepage": "https://github.com/ngbp/ngbp",
-  "licenses": {
-    "type": "MIT",
-    "url": "https://raw.github.com/ngbp/ngbp/master/LICENSE"
-  },
-  "bugs": "https://github.com/ngbp/ngbp/issues",
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:ngbp/ngbp.git"
-  },
-  "dependencies": {},
+  "name": "vn",
+  "version": "0.0.0",
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-bump": "0.0.6",
