--- a/bower.json
+++ b/bower.json
@@ -2,11 +2,17 @@
   "name": "ng-boilerplate",
   "version": "0.3.2",
   "devDependencies": {
-    "angular": "~1.2",
+    "angular": "~1.4.x",
     "angular-mocks": "~1.2",
     "bootstrap": "~3.1",
     "angular-bootstrap": "~0.10.0",
     "angular-ui-router": "~0.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "angular-animate": "~1.4.3",
+    "angular": "1.4.3"
+  },
+  "resolutions": {
+    "angular": "1.4.3"
+  }
 }
