--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "angular-animate": "~1.4.3",
-    "angular": "1.4.3"
+    "angular": "1.4.3",
+    "angular-sanitize": "~1.4.3"
   },
   "resolutions": {
     "angular": "1.4.3"
