--- a/bower.json
+++ b/bower.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "angular-animate": "~1.4.3",
     "angular": "1.4.3",
-    "angular-sanitize": "~1.4.3"
+    "angular-sanitize": "~1.4.3",
+    "angular-ui-router-anim-in-out": "~0.0.13"
   },
   "resolutions": {
-    "angular": "1.4.3"
+    "angular": "1.4.3",
+    "angular-animate": "~1.4.3"
   }
 }
