--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "angular-animate": "~1.4.3",
     "angular": "1.4.3",
     "angular-sanitize": "~1.4.3",
-    "angular-ui-router-anim-in-out": "~0.0.13"
+    "angular-ui-router-anim-in-out": "~0.0.13",
+    "ngstorage": "~0.3.7"
   },
   "resolutions": {
     "angular": "1.4.3",
